#+TITLE: Changelog for Alabaster Themes
#+AUTHOR: Niki Tonsky

* Version 1.0.0 (2025-11-11)

** Major Refactoring

This release represents a complete rewrite of the alabaster-emacs package to align with modern Emacs theme best practices, inspired by the ef-themes framework.

** New Features

*** Theme Framework
- Implemented ~alabaster-themes-theme~ macro for consistent theme structure
- Added semantic palette system with color mappings and overrides
- Centralized all face definitions in ~alabaster-themes.el~
- Themes are now data (palette + optional overrides)

*** User Commands
- ~alabaster-themes-select~ - Interactive theme selection with annotations
- ~alabaster-themes-select-light~ - Select from light themes only
- ~alabaster-themes-select-dark~ - Select from dark themes only
- ~alabaster-themes-toggle~ - Toggle between two themes
- ~alabaster-themes-load-random~ - Load random theme
- ~alabaster-themes-rotate~ - Rotate through custom list
- ~alabaster-themes-list-colors~ - Preview palette in tabulated list
- ~alabaster-themes-list-colors-current~ - Preview current theme palette

*** Customization Options
- ~alabaster-themes-headings~ - Per-level heading styles with variable-pitch, weights, heights
- ~alabaster-themes-mixed-fonts~ - Monospace-sensitive constructs
- ~alabaster-themes-variable-pitch-ui~ - Proportional fonts in UI
- ~alabaster-themes-common-palette-overrides~ - Global palette overrides
- Per-theme ~*-palette-overrides~ - Individual theme overrides
- Font weight system (thin to ultrabold)

*** Expanded Face Coverage
- 500+ face definitions (was ~40)
- Comprehensive package support:
  - Version Control: Magit, diff-hl, git-gutter
  - Completion: Company, Corfu, Vertico, Orderless, Consult, Embark, Marginalia
  - Navigation: Avy, Which-key
  - Programming: Flycheck, Flymake, Eglot, LSP Mode
  - Documentation: Org, Elfeed, EWW, Info, Man
  - Mail: Message, Gnus
  - Editing: Yasnippet, Smartparens, Show-paren, Rainbow-delimiters